--- a/styles_contact.css
+++ b/styles_contact.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #20293b;
+    background-color: #ffffff;
     color: white;
     margin: 0;
     padding: 0;
@@ -59,7 +59,7 @@ body {
 
 .contact-section h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
 }
 
 .book-now {
@@ -134,3 +134,87 @@ body {
 .contact-item a:hover {
     text-decoration: underline;
 }
+
+/* Footer Styles */
+.footer {
+    background-color: #1E2A45;
+    color: #fff;
+    padding: 20px 0;
+  }
+  
+  .container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .footer-section {
+    flex: 1;
+    margin: 10px;
+  }
+  
+  .footer-section h2 {
+    color: #fff;
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+  
+  .footer-section p {
+    font-size: 14px;
+    color: #ccc;
+  }
+  
+  .footer-section ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .footer-section ul li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-section ul li a {
+    color: #ccc;
+    text-decoration: none;
+  }
+  
+  .footer-section ul li a:hover {
+    color: #fff;
+  }
+  
+  .footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .footer-bottom p {
+    font-size: 14px;
+    color: #ccc;
+  }
+  
+  .footer-section.social ul {
+    display: flex;
+    padding: 0;
+  }
+  
+  .footer-section.social ul li {
+    margin-right: 15px;
+  }
+  
+  .footer-section.social ul li a {
+    display: flex;
+    align-items: center;
+    color: #ccc;
+  }
+  
+  .footer-section.social ul li a:hover {
+    color: #fff;
+  }
