--- a/styles_electrical.css
+++ b/styles_electrical.css
@@ -76,44 +76,38 @@ body {
   padding: 20px;
 }
 
-h1 {
+.container h1 {
     color: #333;
     font-size: 28px;
     margin-bottom: 20px;
 
 }
 
-h2 {
-    color: #2c3e50;
-    font-size: 22px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-
-p {
+.container p {
     color: #555;
     line-height: 1.6;
     margin-bottom: 20px;
 }
 
-ul {
+.container ul {
     list-style-type: none;
-    padding-left: 0;
     color: #333;
 }
 
-ul li {
-    background: url('checkmark.png') no-repeat left center;
+.container ul li {
     padding-left: 30px;
     margin-bottom: 10px;
 }
+.container img {
+  width: 18px;
+}
 
-a {
+.container a {
     color: #3498db;
     text-decoration: none;
 }
 
-a:hover {
+.container a:hover {
     text-decoration: underline;
 }
 
